[project]
name = "bloggenerations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.1",
    "uvicorn>=0.47.0",
    "watchdog>=6.0.0",
]